--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="logos">
                 <img src="logos/Alibaba.svg" alt="">
                 <img src="logos/Amazon.svg" alt="">
-                <img src="logos/Daraz.pk logo.svg" alt="">
+                <img src="logos/daraz.svg" alt="">
                 <img src="logos/Ebay.svg" alt="">
                 <img src="logos/Rakuten.svg" alt="">
                 <img src="logos/Target.svg" alt="">
